fix trigger for lights up

--- a/automations.yaml
+++ b/automations.yaml
@@ -17,9 +17,8 @@
 
 - alias: Lights up
   trigger:
-  - platform: numeric_state
+  - platform: state
     entity_id: sun.sun
-    value_template: "{{ state_attr('sun.sun', 'elevation') }}"
   - platform: state
     entity_id: group.tracker_andrew
     from: not_home
