add pre and post sunset automations

--- a/automations.yaml
+++ b/automations.yaml
@@ -12,7 +12,7 @@
   - service: cover.close_cover
     entity_id: cover.blinds
 
-- alias: Lights up
+- alias: Lights up (pre-sunset)
   trigger:
   - platform: time_pattern
     minutes: /1
@@ -24,12 +24,33 @@
     entity_id: sun.sun
     value_template: "{{ state_attr('sun.sun', 'elevation') }}"
     below: 10
+    above: 0
   action:
   - service: light.turn_on
     entity_id: light.main_lights
     data_template:
       brightness: > 
         {{ (((10 - state_attr('sun.sun', 'elevation')) / 10) * 120)|int(0) }}
+
+- alias: Lights up (post-sunset)
+  trigger:
+  - platform: time_pattern
+    minutes: /1
+  condition:
+  - condition: state
+    entity_id: group.tracker_andrew
+    state: home
+  - condition: numeric_state
+    entity_id: sun.sun
+    value_template: "{{ state_attr('sun.sun', 'elevation') }}"
+    below: 0
+    above: -10
+  action:
+  - service: light.turn_on
+    entity_id: light.main_lights
+    data_template:
+      brightness: > 
+        {{ 30 + (((10 + state_attr('sun.sun', 'elevation')) / 10) * 50)|int(0) }}
 
 - alias: Send roomba home when Andrew comes home
   trigger:
