--- a/configuration.yaml
+++ b/configuration.yaml
@@ -91,6 +91,10 @@ group: !include groups.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
 
+input_boolean:
+  bedtime:
+    name: Bedtime
+
 device_tracker:
   - platform: quantum_gateway
     host: 192.168.1.1
