--- a/automations.yaml
+++ b/automations.yaml
@@ -66,7 +66,7 @@
     entity_id: group.tracker_andrew
     state: home
   - condition: state
-    entity_id: bedtime
+    entity_id: input_boolean.bedtime
     state: on
   - condition: numeric_state
     entity_id: light.main_lights
