--- a/automations.yaml
+++ b/automations.yaml
@@ -66,7 +66,7 @@
     entity_id: group.tracker_andrew
     state: home
   - condition: state
-    entity_id: input_boolean.bedtime
+    entity_id: switch.bedtime
     state: on
   - condition: numeric_state
     entity_id: light.main_lights
@@ -91,9 +91,9 @@
     event_data:
       action: time_for_bed
   action:
-  - service: input_boolean.turn_on
+  - service: switch.turn_on
     data:
-      entity_id: bedtime
+      entity_id: switch.bedtime
 
 
 - alias: Send roomba home when Andrew comes home
