--- a/configuration.yaml
+++ b/configuration.yaml
@@ -95,6 +95,19 @@ input_boolean:
   bedtime:
     name: Bedtime
 
+switch:
+  platform: template
+  switches:
+    bedtime:
+      value_template: >
+        {{ is_state('input_boolean.bedtime', 'on') }}
+      turn_on:
+        - service: input_boolean.turn_on
+          entity_id: input_boolean.bedtime
+      turn_off:
+        - service: input_boolean.turn_off
+          entity_id: input_boolean.bedtime
+
 device_tracker:
   - platform: quantum_gateway
     host: 192.168.1.1
