--- a/configuration.yaml
+++ b/configuration.yaml
@@ -31,6 +31,17 @@ switch:
   - platform: wake_on_lan
     name: pc
     mac: 4C:CC:6A:88:10:3E
+  - platform: template
+    switches:
+      bedtime:
+        value_template: >
+          {{ is_state('input_boolean.bedtime', 'on') }}
+        turn_on:
+          - service: input_boolean.turn_on
+            entity_id: input_boolean.bedtime
+        turn_off:
+          - service: input_boolean.turn_off
+            entity_id: input_boolean.bedtime
 
 # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
 # http:
@@ -94,19 +105,6 @@ script: !include scripts.yaml
 input_boolean:
   bedtime:
     name: Bedtime
-
-switch:
-  platform: template
-  switches:
-    bedtime:
-      value_template: >
-        {{ is_state('input_boolean.bedtime', 'on') }}
-      turn_on:
-        - service: input_boolean.turn_on
-          entity_id: input_boolean.bedtime
-      turn_off:
-        - service: input_boolean.turn_off
-          entity_id: input_boolean.bedtime
 
 device_tracker:
   - platform: quantum_gateway
