--- a/automations.yaml
+++ b/automations.yaml
@@ -95,7 +95,6 @@
     data:
       entity_id: switch.bedtime
 
-
 - alias: Send roomba home when Andrew comes home
   trigger:
   - platform: state
@@ -119,7 +118,25 @@
   - service: cover.close_cover
     entity_id: cover.blinds
 
-- alias: Open the blinds a little when I wake up
+- alias: Andrew goes to sleep
+  trigger:
+  - platform: event
+    event_type: ifttt_webhook_received
+    event_data:
+      action: goodnight
+  action:
+  - service: cover.set_cover_position
+    entity_id: cover.blinds
+    data:
+      position: 20
+  - service: switch.turn_off
+    data:
+      entity_id: switch.bedtime
+  - service: light.turn_off
+    data:
+      entity_id: light.all_lights
+
+- alias: Andrew wakes up
   trigger:
   - platform: event
     event_type: ifttt_webhook_received
@@ -130,6 +147,18 @@
     entity_id: cover.blinds
     data:
       position: 20
+  - service: light.turn_on
+    entity_id: light.kitchen
+    data:
+      brightness: 100
+  - service: light.turn_on
+    entity_id: light.kitchen
+    data:
+      brightness: 100
+  - service: light.turn_on
+    entity_id: light.bathroom
+    data:
+      brightness: 70
 
 - alias: Turn off the lights when I leave home
   trigger:
@@ -139,7 +168,7 @@
     to: not_home
   action:
   - service: homeassistant.turn_off
-    entity_id: group.all_lights
+    entity_id: light.all_lights
   - service: homeassistant.turn_off
     entity_id: switch.living_room
   - service: ifttt.trigger
@@ -259,8 +288,8 @@
   - service: homeassistant.turn_off
     entity_id: group.all_lights
 
-- alias: Light show
-  id: light_show
+- alias: Andrew arrives home
+  id: arrive_home
   trigger:
   - platform: state
     entity_id: group.tracker_andrew
@@ -273,74 +302,66 @@
       entity_id: group.tracker_andrew
       state: home
   action:
-  ## 1
-  - service: light.turn_on
-    entity_id: light.bedroom
-  - service: light.turn_on
-    data_template:
-      entity_id: light.bedroom
-      brightness: 1
-      rgb_color:
-      - 255
-      - 0
-      - 255
-  - service: light.turn_on
-    data_template:
-      entity_id: light.kitchen
-      brightness: 1
-      rgb_color:
-      - 255
-      - 0
-      - 255
-  - service: light.turn_on
-    data_template:
-      entity_id: light.lounge
-      brightness: 1
-      rgb_color:
-      - 255
-      - 0
-      - 0
-  ## 2
-  - service: light.turn_on
-    data_template:
-      entity_id: light.kitchen
-      brightness: 255
-      transition: 2
-      rgb_color:
-      - 255
-      - 0
-      - 255
-  - service: light.turn_on
-    data_template:
-      entity_id: light.bedroom
-      brightness: 255
-      transition: 2
-      rgb_color:
-      - 0
-      - 255
-      - 255
-  - service: light.turn_on
-    data_template:
-      entity_id: light.lounge
-      brightness: 255
-      transition: 2
-      rgb_color:
-      - 255
-      - 0
-      - 255
-  ## 3
-  - service: light.turn_on
-    data_template:
-      entity_id: light.bedroom
-      brightness: 89
-      color_name: "Warm White"
-  - service: light.turn_on
-    data_template:
-      entity_id: light.kitchen
-      brightness: 89
-      color_name: "Warm White"
-  - service: light.turn_on
-    data_template:
-      entity_id: light.lounge
-      brightness: 89
-      color_name: "Warm White"
+    script:
+      raise_lights:
+        sequence:
+        - service: light.turn_on
+          data_template:
+            entity_id: light.main_lights
+            brightness: 10
+            color_name: "Warm White"
+        - delay: '00:00:1'
+        - service: light.turn_on
+          data_template:
+            entity_id: light.main_lights
+            brightness: 20
+            color_name: "Warm White"
+        - delay: '00:00:1'
+        - service: light.turn_on
+          data_template:
+            entity_id: light.main_lights
+            brightness: 30
+            color_name: "Warm White"
+        - delay: '00:00:1'
+        - service: light.turn_on
+          data_template:
+            entity_id: light.main_lights
+            brightness: 40
+            color_name: "Warm White"
+        - delay: '00:00:1'
+        - service: light.turn_on
+          data_template:
+            entity_id: light.main_lights
+            brightness: 50
+            color_name: "Warm White"
+        - delay: '00:00:1'
+        - service: light.turn_on
+          data_template:
+            entity_id: light.main_lights
+            brightness: 60
+            color_name: "Warm White"
+        - delay: '00:00:1'
+        - service: light.turn_on
+          data_template:
+            entity_id: light.main_lights
+            brightness: 70
+            color_name: "Warm White"
+        - delay: '00:00:1'
+        - service: light.turn_on
+          data_template:
+            entity_id: light.main_lights
+            brightness: 80
+            color_name: "Warm White"
+        - delay: '00:00:1'
+        - service: light.turn_on
+          data_template:
+            entity_id: light.main_lights
+            brightness: 90
+            color_name: "Warm White"
+        - delay: '00:00:1'
+        - service: light.turn_on
+          data_template:
+            entity_id: light.main_lights
+            brightness: 100
+            color_name: "Warm White"
+        - delay: '00:00:1'
