--- a/automations.yaml
+++ b/automations.yaml
@@ -288,16 +288,18 @@
   - service: homeassistant.turn_off
     entity_id: group.all_lights
 
-# - alias: Andrew arrives home
-#   id: arrive_home
-#   trigger:
-#   - platform: state
-#     entity_id: group.tracker_andrew
-#     from: not_home
-#     to: home
-#   condition:
-#     condition: or
-#     conditions:
-#     - condition: state
-#       entity_id: group.tracker_andrew
-#       state: home
+- alias: Andrew arrives home
+  id: arrive_home
+  trigger:
+  - platform: state
+    entity_id: group.tracker_andrew
+    from: not_home
+    to: home
+  condition:
+    condition: or
+    conditions:
+    - condition: state
+      entity_id: group.tracker_andrew
+      state: home
+  action:
+  - service: script.raise_lights
