--- a/configuration.yaml
+++ b/configuration.yaml
@@ -107,6 +107,7 @@ input_boolean:
     name: Bedtime
 
 device_tracker:
+  - platform: gpslogger
   - platform: netgear
     host: 192.168.1.1
     username: admin
