--- a/configuration.yaml
+++ b/configuration.yaml
@@ -125,6 +125,8 @@ device_tracker:
   - platform: nmap_tracker
     hosts: 192.168.1.1-255
     scan_options: " --privileged -sn "
+    exclude:
+      - 192.168.1.10
 
 # notify:
 #   - name: slack
