--- a/automations.yaml
+++ b/automations.yaml
@@ -295,6 +295,10 @@
   action:
   - service: homeassistant.turn_off
     entity_id: group.all_lights
+  - service: light.turn_on
+    entity_id: light.vanity
+    data:
+      brightness: 10
 
 - alias: Andrew arrives home
   id: arrive_home
