--- a/automations.yaml
+++ b/automations.yaml
@@ -326,5 +326,5 @@
     action:
     - service: cover.set_cover_position
       event_data:
-        entity_id: cover.window_covering_device_1
+        entity_id: cover.right_blind
         position: 60
